crudcrate-derive/tests/ui-fail/deprecated_fn_create.stderr
error: The `fn_create` attribute is deprecated and no longer supported.
       Use the new hook syntax instead: `create::one::body = your_function`

       Migration guide:
       - fn_create      -> create::one::body
       - fn_get_one     -> read::one::body
       - fn_get_all     -> read::many::body
       - fn_update      -> update::one::body
       - fn_delete      -> delete::one::body
       - fn_delete_many -> delete::many::body

       New hook phases available:
       - ::pre  - runs before the operation (validation, auth)
       - ::body - replaces the default implementation
       - ::post - runs after the operation (notifications, side effects)
  --> tests/ui-fail/deprecated_fn_create.rs:15:5
   |
15 |     fn_create = custom_create,  // Deprecated syntax - should error
   |     ^^^^^^^^^
